--- a/3_LLN/HW_law_of_large_numbers.ipynb
+++ b/3_LLN/HW_law_of_large_numbers.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3 Varie M above and comment the changes. What does it happen when M=10? M=100? M=500? M=10000?"
+    "### Q3 Vary M above and comment on the changes in the results. What happens when M = 10? M = 100? M = 500? M = 10,000?"
    ]
   },
   {
